Criando token jwt
